# Voknap-CMR-for-Sales

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: quality.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_company_workspace_contract.py  0003_data_model_hardening.py  0004_company_knowledge_scope.py  0005_connectors_production_layer.py  0006_communication_hub.py  0007_rag_scope_metadata.py  0008_embedding_metadata.py  0009_pgvector_storage.py  0010_s3_ocr_metadata.py  0011_tenant_rls.py  0012_schema_contract_alignment.py  0013_membership_roles.py  0014_crm_lifecycle.py  0015_team_management.py  0016_automation_engine.py  0017_real_integrations.py  0018_sales_production_foundations.py
app/: main.py
app/core/: config.py  database.py  dependencies.py  rbac.py  security.py  tenancy.py
app/modules/accounts/: assignment.py  models.py  router.py  schemas.py  team_router.py
app/modules/activity/: models.py  router.py  schemas.py  service.py
app/modules/ai_agent/: models.py  router.py  schemas.py  service.py
app/modules/auth/: router.py  (+1 more)
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e/: README.md  visual.spec.ts
frontend/scripts/: check-contrast.mjs
frontend/src/: api.test.ts  api.ts  lifecycleConfig.ts  main.ts  style.css  types.ts
scripts/: dev.sh  dev_access.py  quality_gate.sh  reindex_knowledge.py  run_automations.py  run_integration_worker.py  seed_demo.py  seed_dev_workspace.py
tests/: test_automation_engine.py  test_crm_lifecycle.py  test_email_connector.py  test_embedding_service.py  test_home_copilot.py  test_integrations.py  test_knowledge_files.py  test_knowledge_scope.py  test_knowledge_upload.py  test_rbac.py  test_stage_labels.py  test_team_management.py  test_tenant_isolation.py  test_tenant_rls_postgres.py
(+129 files in other folders)
