[project]
name = "crm-sales-app"
version = "0.1.0"
description = "Modular CRM foundation for sales teams"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic-settings>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "email-validator>=2.2.0",
    "psycopg[binary]>=3.2.0",
    "python-multipart>=0.0.9",
    "alembic>=1.13.0",
    "openai>=1.90.0",
    "pgvector>=0.4.0",
    "pypdf>=6.0.0",
    "python-docx>=1.1.0",
    "boto3>=1.42.0",
    "PyMuPDF>=1.26.0",
    "pytesseract>=0.3.13",
    "Pillow>=11.0.0",
    "httpx>=0.27.0",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.20",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "postgres: requires an isolated PostgreSQL test database",
]
